# dw_ecommerce

./: .gitignore  README.md  pyproject.toml  requirements.txt
dw_portfolio1/: dbt_project.yml
dw_portfolio1/models/gold/: gold_kpi_tb_sales.sql
dw_portfolio1/models/gold/metrics/: gold_kpi_age_metrics_1.sql  gold_kpi_age_metrics_2.sql  gold_kpi_country_metrics_1.sql  gold_kpi_country_metrics_2.sql  gold_kpi_pltfrm_metrics_1.sql  gold_kpi_pltfrm_metrics_2.sql  gold_kpi_tb_metrics.sql
dw_portfolio1/models/gold/metrics/age/: gold_kpi_age_metrics_1.sql
dw_portfolio1/models/gold/metrics/country/: gold_kpi_country_metrics.sql  gold_kpi_country_metrics_2.sql
dw_portfolio1/models/gold/metrics/platform/: gold_kpi_metrics_1.sql  gold_kpi_metrics_2.sql  gold_kpi_metrics_3.sql  gold_kpi_metrics_4.sql  gold_kpi_metrics_5.sql  gold_kpi_pltfrm_metrics_1.sql  gold_kpi_pltfrm_metrics_2.sql
dw_portfolio1/models/gold/sales/: gold_kpi_sales_1.sql  gold_kpi_sales_2.sql  gold_kpi_sales_3.sql  gold_kpi_sales_4.sql  gold_kpi_sales_5.sql  gold_kpi_sales_6.sql  gold_kpi_sales_7.sql  gold_kpi_sales_8.sql  gold_kpi_tb_sales.sql
dw_portfolio1/models/silver/: schema.yml  silver_clients.sql  silver_products.sql  silver_products_metrics.sql  silver_sales.sql
dw_portfolio1/models/silver/tests/: silver_clients_test.yml
src/: teste.py
src/data/: Products.csv  Products_Metrics.csv  base_products_metrics.csv
src/data/fill_data/: Products.py  Products_Metrics.py  Sales_data.py  fill_data.py  generate_clients.py  generate_products.py  generate_products_metrics.py  generate_sales.py
src/pipeline/extract/: extract_local.py
src/pipeline/generate_dataset/: generate_clients.py  generate_products.py  generate_products_metrics.py  generate_sales.py
src/pipeline/load/: db_loader.py  to_rds.py
