[project]
name = "projeto-1"
version = "0.1.0"
description = ""
authors = [
    {name = "feelipensousa",email = "felipenogueirafebob11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "faker (>=37.6.0,<38.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
