[project]
name = "projeto-1"
version = "0.1.0"
description = ""
authors = [
    {name = "feelipensousa",email = "felipenogueirafebob11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pytest (==8.4.1)",
    "black (==25.1.0)",
    "isort (==6.0.1)",
    "mkdocs (==1.6.1)",
    "taskipy (==1.14.1)",
    "flake8 (==7.3.0)",
    "pandas (==2.3.2)",
    "faker (>=37.6.0,<38.0.0)",
    "click (==8.2.1)",
    "colorama (==0.4.6)",
    "ghp-import (==2.1.0)",
    "iniconfig (==2.1.0)",
    "jinja2 (==3.1.6)",
    "markdown (==3.8.2)",
    "markupsafe (==3.0.2)",
    "mccabe (==0.7.0)",
    "mergedeep (==1.3.4)",
    "mkdocs-get-deps (==0.2.0)",
    "mslex (==1.3.0)",
    "mypy-extensions (==1.1.0)",
    "numpy (==2.3.2)",
    "packaging (==25.0)",
    "pathspec (==0.12.1)",
    "platformdirs (==4.4.0)",
    "pluggy (==1.6.0)",
    "psutil (==6.1.1)",
    "pycodestyle (==2.14.0)",
    "pyflakes (==3.4.0)",
    "pygments (==2.19.2)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "pyyaml (==6.0.2)",
    "pyyaml-env-tag (==1.1)",
    "six (==1.17.0)",
    "tomli (==2.2.1)",
    "tzdata (==2025.2)",
    "watchdog (==6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
